@startuml NextStep Diagrama de Clases

class Role {
  + id : number
  + name : string
  + isDefault : boolean
}

class User {
  + id : number
  + email : string
  - passwordHash : string
  + firstName : string
  + lastName : string
  + createdAt : Date
  + updatedAt : Date
  + role : Role
}

class Seniority {
  + id : number
  + name : string
}

class JobOffer {
  + id : number
  + title : string
  + description : string
  + isActive : boolean
  + createdAt : Date
  + updatedAt : Date
  + recruiter : User
  + seniority : Seniority
}

class Stage {
  + id : number
  + name : string
  + sequenceOrder : number
  + isTerminal : boolean
  + isHiredStage : boolean
}

class Application {
  + id : number
  + appliedAt : Date
  + updatedAt : Date
  + applicant : User
  + jobOffer : JobOffer
  + currentStage : Stage
  + feedbacks : Feedback[]
}

class Feedback {
  + id : number
  + technicalScore : number | null
  + softSkillsScore : number | null
  + comment : string
  + internalNotes : string
  + publicFeedback : string
  + createdAt : Date
  + application : Application
  + recruiter : User
  + stage : Stage
  + scorecards : Scorecard[]
}

class Scorecard {
  + id : number
  + skillName : string
  + score : number
  + type : 'technical' | 'soft'
  + createdAt : Date
  + feedback : Feedback
}

class CvFile {
  + id : UUID
  + originalName : string
  + storedName : string
  + extension : string
  + directory : string
  + createdAt : Date
  + user : User
}

class AuditLog {
  + id : number
  + action : string
  + tableName : string
  + recordId : string
  + metadata : any
  + createdAt : Date
  + user : User
}

' Relaciones
User "many" --> "1" Role : "tiene"
User "many" --> "1" CvFile : "sube"
User "many" --> "1" AuditLog : "genera"
User "1" --> "many" JobOffer : "recruiter"
User "1" --> "many" Application : "applicant"
User "1" --> "many" Feedback : "escribe"

Seniority "1" --> "many" JobOffer : "categoriza"

JobOffer "1" --> "many" Application : "recibe"

Stage "1" --> "many" Application : "estado actual"
Stage "1" --> "many" Feedback : "identifica momento"

Application "1" *-- "many" Feedback : "tiene"
Feedback "1" *-- "many" Scorecard : "contiene"

@enduml